Closed
Bug 439304
Opened 17 years ago
Closed 17 years ago
Assertions when autocompleting recipient (ASSERTION: Replacing?: '!m_AddressList || NS_FAILED(m_AddressList->IndexOf(0, aDirectory, &pos))')
Categories
(Thunderbird :: Address Book, defect)
Tracking
(Not tracked)
RESOLVED
FIXED
Thunderbird 3
People
(Reporter: hwaara, Assigned: standard8)
Details
Attachments
(1 file)
|
827 bytes,
patch
|
Bienvenu
:
review+
Bienvenu
:
superreview+
|
Details | Diff | Splinter Review |
I get a lot of these assertions (probably around 10) from the OS X address book, every time I write in the Compose window's To: field and it tries to autocomplete.
###!!! ASSERTION: Replacing?: '!m_AddressList || NS_FAILED(m_AddressList->IndexOf(0, aDirectory, &pos))', file /Users/hakan/Programmering/mozilla/thunderbird-work1/mozilla/mailnews/addrbook/src/nsAbOSXDirectory.mm, line 687
Thunderbird trunk from 2008-06-13, Mac OS X Leopard.
| Reporter | ||
Comment 1•17 years ago
|
||
I also get it during sending of said message. Perhaps the assertion is fired every time an email address to looked up in the address book?
| Assignee | ||
Comment 2•17 years ago
|
||
So the problem here is that the OS X factory is calling up AssertChildNodes which always adds the child nodes onto the address book list. Although an OS X directory keeps track of everything, I'm nervous about adding a check in at that stage.
So I've gone for returning straight away which will avoid adding the item again (and notifying about it), but allow us to do the right thing: nothing.
This will also help the problem with bug 449260 where we're getting recursive problems due to how this is working.
Assignee: nobody → bugzilla
Status: NEW → ASSIGNED
Attachment #333598 -
Flags: superreview?(bienvenu)
Attachment #333598 -
Flags: review?(bienvenu)
Updated•17 years ago
|
Attachment #333598 -
Flags: superreview?(bienvenu)
Attachment #333598 -
Flags: superreview+
Attachment #333598 -
Flags: review?(bienvenu)
Attachment #333598 -
Flags: review+
| Assignee | ||
Comment 3•17 years ago
|
||
Patch checked in, changeset id: 99:e666b8f2c874
Fixed.
Status: ASSIGNED → RESOLVED
Closed: 17 years ago
Resolution: --- → FIXED
Target Milestone: --- → Thunderbird 3
You need to log in
before you can comment on or make changes to this bug.
Description
•