Bug 439304 Assertions when autocompleting recipient (ASSERTION: Replacing?: '\!m_AddressList || NS_FAILED(m_AddressList->IndexOf(0, aDirectory, &pos))') - due to incorrect assumption in Mac OS X Address Book. r/sr=bienvenu